--- a/frontpage/templates/frontpage.html
+++ b/frontpage/templates/frontpage.html
@@ -4,12 +4,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta http-equiv="Content-Style-Type" content="text/css">
 <title>CollectiveVIP - Beta</title>
-<link type="text/css" href="style.css" rel="stylesheet">
+<link type="text/css" href="/simpz/site_media/frontpage_style.css" rel="stylesheet">
 </head>
 
 <body>
 <BR><BR><BR>
-<img class="displayed" src="images/logo.jpeg">
+<img class="displayed" src="/simpz/site_media/images/frontpage_collective_logo.jpeg">
 <div class="centered">currently in private beta</div>
 </body>
 </html>
