--- a/simpz/templates/blogvip_flow.html
+++ b/simpz/templates/blogvip_flow.html
@@ -277,7 +277,7 @@ $(document).ready(function() {
 		
 		{% endif %}
 
-		FB.init({appId: '374592118121', status: true, cookie: true, xfbml: true});
+		FB.init({appId: '{{fbappid}}', status: true, cookie: true, xfbml: true});
 
 		$("#feed").click(function(){
 			$.ajax({
