Fixing reload on share.

--- a/simpz/templates/blogvip_flow.html
+++ b/simpz/templates/blogvip_flow.html
@@ -322,7 +322,7 @@ $(document).ready(function() {
 			}, 
 			success: function(data){
 				$.get('/simpz/ajax/event_going/{{event.id}}', function(data) {
-					location.reload();
+					//location.reload();
 				});
 			},
 			beforeSend: function() {
