--- a/simpz/templates/blogvip_flow.html
+++ b/simpz/templates/blogvip_flow.html
@@ -17,8 +17,8 @@
 
 
 <div id="greeting">
-	Hi {{user.name}}!
-	<div id="status"><img src="/simpz/site_media/images/look/gr.png"></div>
+	Hello!
+	<div id="status"></div>
 </div>
 
 
@@ -27,7 +27,7 @@
 </div>
 
 
-<div id="invitemsg">There are {{event.num_attendees}} attending. join us</div>
+<div id="invitemsg">Share coupon with friends & get 20% off</div>
 
 <div id="overlay-blogger-login" class="overlay-blogger">
 
@@ -88,7 +88,7 @@
 		<div id="facebook-top-msg">
 			<img src="/simpz/site_media/images/facebook-share-msg.png">
 		</div>
-		<textarea id="overlay-textarea" >Come check out this conference with me! {{invite_url}}</textarea>
+		<textarea id="overlay-textarea" >Join me at BlogWorld in Las Vegas, Oct 14-16. Use my 20% off coupon: {{invite_url}}</textarea>
 	</div>
 	
 	<div id="overlay-div-content2-twitter">
@@ -103,7 +103,7 @@
 		<div id="twitter-top-msg">
 			<img src="/simpz/site_media/images/twitter-share-msg.png">
 		</div>
-		<textarea id="overlay-textarea" >Great Event, Come with me. {{invite_url}}</textarea>
+		<textarea id="overlay-textarea" >Join me at BlogWorld in Las Vegas, Oct 14-16. Use my 20% off coupon: {{invite_url}}</textarea>
 	</div>
 	<div id="overlay-div-content3" >
 
@@ -119,9 +119,11 @@
 		</div>
 		
 			<BR /><BR />
-			<div id="code-msg">Thanks! You've shared your discount with your friends.			<BR>
-			<BR>
-			Here’s your discount code:</div>      	<div id="code"><p>blahblah</p></div>
+			<div id="code-msg">Thanks! You've shared your discount with your friends.<BR><BR>
+			Here’s your discount code:
+			</div>      	
+			
+			<div id="code"><p>JOHNCHOW1</p></div>
 
 	</div>
 
@@ -145,9 +147,9 @@
 	</div>
 	<div id="detsfooter"></div>
 </div> 
-<div id="eventinfo"><b>Exhibits:</b> Oct 15-16 | <b>Conference:</b> Oct 14-16<br>Mandalay Bay Convention Center | Las Vegas Nevada</div>
+<div id="eventinfo"><b>Exhibits:</b> Oct 15-16 | <b>Conference:</b> Oct 14-16<br>Mandalay Bay Convention Center | Las Vegas, Nevada</div>
 <div id="attendees">
-	<div id="msg">Current Guest List</div>
+	<div id="msg">Interested Guests</div>
 
 
 	<br/><br/><br/><br/><br/><br/>
