--- a/simpz/templates/event_base.html
+++ b/simpz/templates/event_base.html
@@ -25,8 +25,10 @@
 <body>
 <div class="wrap">
 	<div id="main">
-		<div id="header">		
-			<div id ="fuck">
+		<div id="header">
+					<div id ="f">
+					<div id="jclink"><a href="http://www.johnchow.com"><img src="/simpz/site_media/images/jclink.png"></a></div>	
+
 				<div id="links"><a href="#">Get CollectiveVIP</a> &nbsp;&nbsp; <a href="#">How it Works</a> &nbsp;&nbsp; <a href="#">Contact</a></div>
     <!-- Header Content -->
     {% include "header.html" %}    
