--- a/simpz/templates/blogvip_flow.html
+++ b/simpz/templates/blogvip_flow.html
@@ -88,7 +88,7 @@
 		<div id="facebook-top-msg">
 			<img src="/simpz/site_media/images/facebook-share-msg.png">
 		</div>
-		<textarea id="overlay-textarea" >Join me at BlogWorld in Las Vegas, Oct 14-16. Use my 20% off coupon: {{invite_url}}</textarea>
+		<textarea id="overlay-textarea-facebook">Join me at BlogWorld in Las Vegas, Oct 14-16. Use my 20% off coupon: {{invite_url}}</textarea>
 	</div>
 	
 	<div id="overlay-div-content2-twitter">
@@ -103,7 +103,7 @@
 		<div id="twitter-top-msg">
 			<img src="/simpz/site_media/images/twitter-share-msg.png">
 		</div>
-		<textarea id="overlay-textarea" >Join me at BlogWorld in Las Vegas, Oct 14-16. Use my 20% off coupon: {{invite_url}}</textarea>
+		<textarea id="overlay-textarea-twitter" >Join me at BlogWorld in Las Vegas, Oct 14-16. Use my 20% off coupon: {{invite_url}}</textarea>
 	</div>
 	<div id="overlay-div-content3" >
 
@@ -315,10 +315,11 @@ $(document).ready(function() {
 			$('#overlay-div-content2-facebook').hide();	 
 			$('#overlay-div-content2-twitter').hide();
 			$('#overlay-div-content3').show();
+ 
 			$.ajax({
 				url: '/simpz/ajax/event_tweet_invite/{{event.id}}', 
 				dataType: "json",
-				data: {data: $("#overlay-textarea").val(), 
+				data: {data: $("#overlay-textarea-twitter").val(), 
 				invite_url: '{{invite_url}}'
 				//invite_id: {{invite_id}}
 			}, 
@@ -341,7 +342,7 @@ $(document).ready(function() {
 		$.ajax({
 			url: '/simpz/ajax/facebook_update_feed/', 
 			dataType: "json",
-			data: {message: $("#overlay-textarea").val()},
+			data: {message: $("#overlay-textarea-facebook").val()},
 			success: function(data){
 
 			},
