minor ui updates

--- a/simpz/templates/blogvip_flow.html
+++ b/simpz/templates/blogvip_flow.html
@@ -88,7 +88,7 @@
 		<div id="facebook-top-msg">
 			<img src="/simpz/site_media/images/facebook-share-msg.png">
 		</div>
-		<textarea id="overlay-textarea-facebook">Join me at BlogWorld in Las Vegas, Oct 14-16. Use my 20% off coupon: {{invite_url}}</textarea>
+		<textarea id="overlay-textarea-facebook">Join me at BlogWorld in Las Vegas, Oct 14-16. Use my 20% off coupon http://bit.ly/9o4l7j</textarea>
 	</div>
 	
 	<div id="overlay-div-content2-twitter">
@@ -103,7 +103,7 @@
 		<div id="twitter-top-msg">
 			<img src="/simpz/site_media/images/twitter-share-msg.png">
 		</div>
-		<textarea id="overlay-textarea-twitter" >Join me at BlogWorld in Las Vegas, Oct 14-16. Use my 20% off coupon: {{invite_url}}</textarea>
+		<textarea id="overlay-textarea-twitter" >Join me at BlogWorld in Las Vegas, Oct 14-16. Use my 20% off coupon http://bit.ly/9o4l7j</textarea>
 	</div>
 	<div id="overlay-div-content3" >
 
