--- a/simpz/templates/blogvip_flow.html
+++ b/simpz/templates/blogvip_flow.html
@@ -27,7 +27,7 @@
 </div>
 
 
-<div id="invitemsg">Share coupon with friends & get 20% off</div>
+<div id="invitemsg">Share coupon with friends & get <b><font color="#8929e9">20% off</font></b></div>
 
 <div id="overlay-blogger-login" class="overlay-blogger">
 
