--- a/simpz/templates/blogvip_flow.html
+++ b/simpz/templates/blogvip_flow.html
@@ -53,7 +53,7 @@
 			<br/>
 			<div class="logoutnow" href="">logout from facebook</div>
 			{% else %}
-			<a href=""><img id="facebook-login" src="/simpz/site_media/images/facebook-button.png"/></a>
+			<img id="facebook-login" src="/simpz/site_media/images/facebook-button.png"/>
 			{% endif %}
 		</div>
 
@@ -279,7 +279,7 @@ $(document).ready(function() {
 		
 		{% endif %}
 
-		FB.init({appId: '{{fbappid}}', status: true, cookie: true, xfbml: true});
+		FB.init({appId: '374592118121', status: true, cookie: true, xfbml: true});
 
 		$("#feed").click(function(){
 			$.ajax({
@@ -367,7 +367,17 @@ $(document).ready(function() {
 
 	var requiredPerms = ['email','user_about_me','user_birthday','user_website', 'publish_stream'];
 	$('#facebook-login').click(function(){
-		facebook_login_click();
+        FB.getLoginStatus(function(response) {
+        if (response.session) {
+           // logged in and connected user, someone you know
+           //alert("LOGGED IN");
+        } else {
+           // no user session available, someone you dont know
+          //alert("LOGGED OUT");
+          facebook_login_click();
+        }
+
+      });
 	});
 
 
@@ -381,16 +391,19 @@ $(document).ready(function() {
 		$.cookie("access_token", null, options);
 		$.cookie("sig", null, options);
 
+                //alert("loging out of facebook");
 		FB.logout(function(response) { 
-
-			$.get('/simpz/facebook_logout_callback/', function(data) {
-				$("#overlay-div-facebook-login").html("<a href='#'><img id='facebook-login' src='/simpz/site_media/images/Facebook-Button.png'/></a>");
-				$("#overlay-div-facebook-login").click(function(){
-					facebook_login_click(requirePerms);
-				});
-			});
+                       //alert("facebook logout refresh");
+			//$.get('/simpz/facebook_logout_callback/', function(data) {
+			//	$("#overlay-div-facebook-login").html("<a href='#'><img id='facebook-login' src='/simpz/site_media/images/Facebook-Button.png'/></a>");
+			//	$("#overlay-div-facebook-login").click(function(){
+			//		facebook_login_click(requirePerms);
+			//	});
+                        
+                        window.location.href = "/simpz/facebook_logout_callback/?redirectArgs=overlayEQUALStrue";
+			//});
 		});
-                window.location.href = "/simpz/facebook_logout_callback/?redirectArgs=overlayEQUALStrue";
+                //window.location.href = "/simpz/facebook_logout_callback/?redirectArgs=overlayEQUALStrue";
 	});
 
 	$("#invite_popup_close").bind('click', function() {
