--- a/simpz/templates/blogvip_flow.html
+++ b/simpz/templates/blogvip_flow.html
@@ -88,7 +88,7 @@
 		<div id="facebook-top-msg">
 			<img src="/simpz/site_media/images/facebook-share-msg.png">
 		</div>
-		<textarea id="overlay-textarea-facebook">Join me at BlogWorld in Las Vegas, Oct 14-16. Use my 20% off coupon http://bit.ly/9o4l7j</textarea>
+		<textarea id="overlay-textarea-facebook">Join me at BlogWorld in Las Vegas, Oct 14-16. Use my 20% off coupon.</textarea>
 	</div>
 	
 	<div id="overlay-div-content2-twitter">
@@ -103,7 +103,7 @@
 		<div id="twitter-top-msg">
 			<img src="/simpz/site_media/images/twitter-share-msg.png">
 		</div>
-		<textarea id="overlay-textarea-twitter" >Join me at BlogWorld in Las Vegas, Oct 14-16. Use my 20% off coupon http://bit.ly/9o4l7j</textarea>
+		<textarea id="overlay-textarea-twitter" >Join me at BlogWorld in Las Vegas, Oct 14-16. Use my 20% off coupon.</textarea>
 	</div>
 	<div id="overlay-div-content3" >
 
@@ -181,7 +181,6 @@
 -->
 
 <script>
-
 $(document).ready(function() {
         var contentView = 0;
 
@@ -319,9 +318,8 @@ $(document).ready(function() {
 			$.ajax({
 				url: '/simpz/ajax/event_tweet_invite/{{event.id}}', 
 				dataType: "json",
-				data: {data: $("#overlay-textarea-twitter").val(), 
-				invite_url: '{{invite_url}}'
-				//invite_id: {{invite_id}}
+				data: {message: $("#overlay-textarea-twitter").val(), 
+				shash: "{{hash}}",
 			}, 
 			success: function(data){
 				$.get('/simpz/ajax/event_going/{{event.id}}', function(data) {
@@ -339,18 +337,19 @@ $(document).ready(function() {
 		$('#overlay-div-content2-facebook').hide();	 
 		$('#overlay-div-content2-twitter').hide();
 		$('#overlay-div-content3').show();
+
 		$.ajax({
 			url: '/simpz/ajax/event_facebook_update/{{event.id}}', 
 			dataType: "json",
-			data: {message: $("#overlay-textarea-facebook").val(),
-                               hash: {{hash}}},
+			data: {message: $("#overlay-textarea-facebook").val(), shash: "{{shash}}" },
 			success: function(data){
                            alert("msg sent");
 			},
 			beforeSend: function() {
-				//alert("sending feed request");
+			   //alert("sending feed request");
 			}
 		});   
+
 	});
 
 	$("#status_button").click(function(){
@@ -477,7 +476,7 @@ $('#invite_dm_button').click(function() {
 		$("#invite_dm_button").attr("disabled","disabled");                      
 		$("#tweet_msg").html("<img width='20' height='20' src='/simpz/site_media/images/ajax-loader.gif' />Sending Direct Msg Tweets<img width='20' height='20' src='/simpz/site_media/images/ajax-loader.gif' />");
 	}
-});
+      });
 });
   
 });
