Gettign analytics up.

--- a/analytics/templates/analytics.html
+++ b/analytics/templates/analytics.html
@@ -4,13 +4,13 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>CollectiveVIP</title>
-<link rel="stylesheet" href="blueprint/screen.css" type="text/css" media="screen, projection">
-<link rel="stylesheet" href="blueprint/print.css" type="text/css" media="print">	
+<link rel="stylesheet" href="/simpz/site_media/blueprint/screen.css" type="text/css" media="screen, projection">
+<link rel="stylesheet" href="/simpz/site_media/blueprint/print.css" type="text/css" media="print">	
 <!--[if lt IE 8]><link rel="stylesheet" href="blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
 
-<link rel="stylesheet" type="text/css" href="css/base.css">
-<link rel="stylesheet" type="text/css" href="css/header.css">
-<link rel="stylesheet" type="text/css" href="css/content.css">
+<link rel="stylesheet" type="text/css" href="/simpz/site_media/analytics/base.css">
+<link rel="stylesheet" type="text/css" href="/simpz/site_media/analytics/header.css">
+<link rel="stylesheet" type="text/css" href="/simpz/site_media/analytics/content.css">
 </head>
 <body>
 <div id="wrapper">
@@ -39,15 +39,15 @@
 			<!-- Impressions pic -->
 			<div id="topPic" class="span-24 last">
 				<div id="topTitle">Total Impressions 1234567</div>
-				<img src="chart.png">
+				<img src="/simpz/site_media/images/analytics/chart.png">
 			</div>			
 			<div id="botPic" class="span-24 last">
 				<div id="botTitle">Breakdown of Sources</div>
 				<div id="botLeftPic" class="span-18">
-					<img src="chart2.png">
+					<img src="/simpz/site_media/images/analytics/chart2.png">
 				</div>
 				<div id="botRightPic" class="span-6 last">
-					<img src="chart3.png">
+					<img src="/simpz/site_media/images/analytics/chart3.png">
 				</div>
 			</div>
 		</div>
@@ -73,7 +73,7 @@
 						Influence
 					</span>
 					<span class="follow">
-						<img src="images/follow.png">
+						<img src="/simpz/site_media/images/analytics/follow.png">
 					</span>
 				</span>
 				<BR><BR><BR><BR>
@@ -93,7 +93,7 @@
 						Influence
 					</span>
 					<span class="follow">
-						<img src="images/follow.png">
+						<img src="/simpz/site_media/images/analytics/follow.png">
 					</span>
 				</span>
 				
@@ -114,7 +114,7 @@
 						Influence
 					</span>
 					<span class="follow">
-						<img src="images/follow.png">
+						<img src="/simpz/site_media/images/analytics/follow.png">
 					</span>
 				</span>
 
@@ -135,7 +135,7 @@
 						Influence
 					</span>
 					<span class="follow">
-						<img src="images/follow.png">
+						<img src="/simpz/site_media/images/analytics/follow.png">
 					</span>
 				</span>
 				
