--- a/static/analytics/base.css
+++ b/static/analytics/base.css
@@ -1,12 +1,12 @@
 
 #wrapper
 {
-	background-image: url(../images/body-bg.png);
+	background-image: url(../images/analytics/body-bg.png);
 	background-repeat: repeat-x;
 }
 #header
 {
-	background: url(../images/bar.png) center top no-repeat;
+	background: url(../images/analytics/bar.png) center top no-repeat;
 	height: 28px;
 	padding-top: 10px;
 	margin-bottom: 20px;
