--- a/simpz/templates/event_base.html
+++ b/simpz/templates/event_base.html
@@ -21,6 +21,20 @@
 	{% endblock %}
     
     <title>{% block title %} {% endblock %}</title>
+    <script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-10568190-7']);
+  _gaq.push(['_setDomainName', '.collectivevip.com']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </head>
 <body>
 <div class="wrap">
@@ -38,7 +52,7 @@
     {% endblock %}			
     
 			</div>
-			<!-- End fuck -->
+			<!-- End f -->
 		</div>
 		<!-- END header -->
 	</div>
