--- a/simpz/templates/blogvip_flow.html
+++ b/simpz/templates/blogvip_flow.html
@@ -2,8 +2,8 @@
 
 {% block  js_css_include %}
 <!--<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key={{map_key}}" type="text/javascript" > </script> -->
-<script type="text/javascript" src="/simpz/site_media/jquery.cookie.js" ></script>
-<link rel="stylesheet" href="/simpz/site_media/overlay.css" type="text/css" >
+<script type="text/javascript" src="{% url static 'jquery.cookie.js' %}" ></script>
+<link rel="stylesheet" href="{% url static 'overlay.css' %}" type="text/css" >
 {% endblock %}
 
 
@@ -18,13 +18,13 @@
 
 
 <div id="greeting">
-	Hello! {%url event_home event_id=event.id %}
+	Hello! 	  
 	<div id="status"></div>
 </div>
 
 
 <div id="invite-button">
-	<a href="" id="invite_button" rel="#overlay-blogger-login"><img src="/simpz/site_media/images/look/button.png"></a>
+	<a href="" id="invite_button" rel="#overlay-blogger-login"><img src="{% url static 'images/look/button.png' %}"></a>
 </div>
 
 
@@ -34,10 +34,10 @@
 
 	<div id="overlay-div-content1">
 		<div class="overlay-top">
-			<img src="/simpz/site_media/images/sharetxt.png">
+			<img src="{% url static 'images/sharetxt.png' %}">
 		</div>
 		<div class="overlay-bot">
-			<div id="previous-grey"><img src="/simpz/site_media/images/previous-grey.png"></div>
+			<div id="previous-grey"><img src="{% url static 'images/previous-grey.png' %}"></div>
 			<div id="invite-progress"><ul><li class="active">Select Network</li> <li>Message</li> <li>Discount</li></div>
 		</div>
 		<BR /><BR />
@@ -54,7 +54,7 @@
 			<br/>
 			<div class="logoutnow" href="">logout from facebook</div>
 			{% else %}
-			<img id="facebook-login" src="/simpz/site_media/images/facebook-button.png"/>
+			<img id="facebook-login" src="{% url static 'images/facebook-button.png'}"/>
 			{% endif %}
 		</div>
 
@@ -64,9 +64,9 @@
 			<br/>Twitter<br />
 			<img id="twitter-profile-image" src="{{user.profile_pic}}" />
 			<br/>
-			<a href="/simpz/logout/?redirectArgs=overlayEQUALStrue">logout from twitter</a>
+			<a href="{% url tauth_logout %}?redirectArgs=overlayEQUALStrue">logout from twitter</a>
 			{% else %}
-			<a href="/simpz/login/?redirectArgs=overlayEQUALStrue"><img id="twitter-login" src="/simpz/site_media/images/twitter-button.png" /></a><br/><br/>
+			<a href="{% url tauth_login %}?redirectArgs=overlayEQUALStrue"><img id="twitter-login" src="{% url static 'images/twitter-button.png' %}" /></a><br/><br/>
 			{% endif %}
 		</div>
 
@@ -74,49 +74,49 @@
 
 	<div id="overlay-div-content2-facebook" >
 		<div class="overlay-top">
-			<img src="/simpz/site_media/images/sharetxt.png">
+			<img src="{% url static 'images/sharetxt.png' %} ">
 		</div>
 		<div class="overlay-bot">
-			<div id="previous" class="previous"><img src="/simpz/site_media/images/previous.png"></div>
+			<div id="previous" class="previous"><img src="{% url static 'images/previous.png' %}"></div>
 			<div id="invite-progress"><ul><li>Select Network</li> <li class="active">Message</li> <li>Discount</li></div>
 			{%if fbuser %}
 			<!--<img id="facebook-feed-update" src="/simpz/site_media/images/facebook-sinvite.png">-->
 			<!--FB Back Button-->
 			<!--<div id="facebook-div-back"><img src="/simpz/site_media/images/back.png" id="facebook-back"></div>-->
-			<div id="facebook-div-feed-update"><img src="/simpz/site_media/images/share.png" id="facebook-feed-update"></div>
+			<div id="facebook-div-feed-update"><img src="{% url static 'images/share.png' %}" id="facebook-feed-update"></div>
 			{% endif %}
 		</div>
 		<div id="facebook-top-msg">
-			<img src="/simpz/site_media/images/facebook-share-msg.png">
+			<img src="{% url static 'images/facebook-share-msg.png' %}">
 		</div>
 		<textarea id="overlay-textarea-facebook">Join me at BlogWorld in Las Vegas, Oct 14-16. Use my 20% off coupon.</textarea>
 	</div>
 	
 	<div id="overlay-div-content2-twitter">
 		<div class="overlay-top">
-			<img src="/simpz/site_media/images/sharetxt.png">  
+			<img src="{% url static 'images/sharetxt.png' %}">  
 		</div>
 		<div class="overlay-bot">
-			<div id="previous" class="previous"><img src="/simpz/site_media/images/previous.png"></div>
+			<div id="previous" class="previous"><img src="{% url static 'images/previous.png' %}"></div>
 			<div id="invite-progress"><ul><li>Select Network</li> <li class="active">Message</li> <li>Discount</li></div>
-			<div id="twitter-div-feed-update"><img src="/simpz/site_media/images/share.png" id="twitter-feed-update"></div>
+			<div id="twitter-div-feed-update"><img src="{% url static 'images/share.png' %}" id="twitter-feed-update"></div>
 		</div>
 		<div id="twitter-top-msg">
-			<img src="/simpz/site_media/images/twitter-share-msg.png">
+			<img src="{% url static 'images/twitter-share-msg.png' %}">
 		</div>
 		<textarea id="overlay-textarea-twitter" >Join me at BlogWorld in Las Vegas, Oct 14-16. Use my 20% off coupon.</textarea>
 	</div>
 	<div id="overlay-div-content3" >
 
-		<div class="overlay-top"><img src="/simpz/site_media/images/sharetxt.png">  
+		<div class="overlay-top"><img src="{% url static 'images/sharetxt.png' %}">  
 
 		</div>
 		<div class="overlay-bot">
 			<div id="previous" class="previous">
-				<img src="/simpz/site_media/images/previous.png">
+				<img src="{% url static 'images/previous.png' %}">
 			</div>
 			<div id="invite-progress"><ul><li>Select Network</li> <li>Message</li> <li class="active">Discount</li></div>
-			<div id="okay"><img src="/simpz/site_media/images/done.png"></div>
+			<div id="okay"><img src="{% url static 'images/done.png' %}"></div>
 		</div>
 		
 			<BR /><BR />
@@ -136,7 +136,7 @@
 	<div id="event-title">BlogWorld 2010 Panel Spotlight</div>
 	<div id="detsbg">
 		<div id="info">Blogging Super Panel Live Feedback</div> 
-		<div id="goog"><img src="/simpz/site_media/images/speakers.png"></div>
+		<div id="goog"><img src="{% url static 'images/speakers.png' }"></div>
 		<p>Is your blog optimizing its potential to make money? Find out! This panel of the top money making bloggers of all time will spend a few hours reviewing your blogs live. So get there early and step up to the mic and be ready to have your blog picked apart by the pros who know.<br><br>
 			John Chow, JohnChow.com<br>
 			Darren Rowse, Problogger.com<br>
@@ -144,7 +144,7 @@
 			Brian Clark, Copyblogger.com<br>
 			Zac Johnson, ZacJohnson.com
 		</p>
-		<div id="blogworld"><img src="/simpz/site_media/images/blogworld.png"></div>
+		<div id="blogworld"><img src="{% url static 'images/blogworld.png' }"></div>
 	</div>
 	<div id="detsfooter"></div>
 </div> 
@@ -283,7 +283,7 @@ $(document).ready(function() {
 
 		$("#feed").click(function(){
 			$.ajax({
-				url: '/simpz/ajax/facebook_update_feed/', 
+				url: '{% url facebook_update_feed %}', 
 				dataType: "json",
 				data: {},
 				success: function(data){
@@ -296,7 +296,7 @@ $(document).ready(function() {
 		});
 		$("#message").click(function(){
 			$.ajax({
-				url: '/simpz/ajax/facebook_message/', 
+				url: '{% url facebook_message %}', 
 				dataType: "json",
 				data: {},
 				success: function(data){
@@ -316,13 +316,13 @@ $(document).ready(function() {
 			$('#overlay-div-content3').show();
  
 			$.ajax({
-				url: '/simpz/ajax/event_tweet_invite/{{event.id}}', 
+				url: '{% url event_tweet_invite event_id=event.id %}', 
 				dataType: "json",
 				data: {message: $("#overlay-textarea-twitter").val(), 
 				shash: "{{hash}}",
 			}, 
 			success: function(data){
-				$.get('/simpz/ajax/event_going/{{event.id}}', function(data) {
+				$.get('{% url event_going event_id=event.id %}', function(data) {
                                      refreshAttendee();
 				});
 			},
@@ -339,7 +339,7 @@ $(document).ready(function() {
 		$('#overlay-div-content3').show();
 
 		$.ajax({
-			url: '/simpz/ajax/event_facebook_update/{{event.id}}', 
+			url: '{% url event_facebook_update event_id=event.id %}', 
 			dataType: "json",
 			data: {message: $("#overlay-textarea-facebook").val(), shash: "{{shash}}" },
 
