--- a/simpz/templates/event_base.html
+++ b/simpz/templates/event_base.html
@@ -5,16 +5,16 @@
     <meta http-equiv="Content-type" content="text/html; charset=iso-8859-1" />
     <meta http-equiv="Content-Language" content="en-us" />
 
-    <script type="text/javascript" src="/simpz/site_media/jquery-1.4.2.min.js" ></script>
-    <script type="text/javascript" src="/simpz/site_media/myjscript.js" ></script>
-    <script type="text/javascript" src="/simpz/site_media/jquery.tools.min.js" ></script>
-    <script type="text/javascript" src="/simpz/site_media/jquery.validate.js" ></script>
+    <script type="text/javascript" src="{% url static 'jquery-1.4.2.min.js' %}" ></script>
+    <script type="text/javascript" src="{% url static 'myjscript.js' %}" ></script>
+    <script type="text/javascript" src="{% url static 'jquery.tools.min.js' %}" ></script>
+    <script type="text/javascript" src="{% url static 'jquery.validate.js' %}" ></script>
 	
- 	<link rel="stylesheet" href="/simpz/site_media/style.css" type="text/css" >
-	<link rel="stylesheet" href="/simpz/site_media/2stylez.css" type="text/css" >
-	<link rel="stylesheet" href="/simpz/site_media/2home.css" type="text/css" >
+ 	<link rel="stylesheet" href="{% url static 'style.css' %}" type="text/css" >
+	<link rel="stylesheet" href="{% url static '2stylez.css' %}" type="text/css" >
+	<link rel="stylesheet" href="{% url static '2home.css' %}" type="text/css" >
 	<!--[if IE]>
-	<link rel="stylesheet" type="text/css" href="/simpz/site_media/2ie.css" />
+	<link rel="stylesheet" type="text/css" href="{% url static '2ie.css' %}" />
 	<![endif]-->
 
 	{% block  js_css_include %}
@@ -41,7 +41,7 @@
 	<div id="main">
 		<div id="header">
 					<div id ="f">
-					<div id="jclink"><a href="http://www.johnchow.com"><img src="/simpz/site_media/images/jclink.png"></a></div>	
+					<div id="jclink"><a href="http://www.johnchow.com"><img src="{% url static 'images/jclink.png' %}"></a></div>	
 
 				<div id="links"><a href="#">Get CollectiveVIP</a> &nbsp;&nbsp; <a href="#">How it Works</a> &nbsp;&nbsp; <a href="#">Contact</a></div>
     <!-- Header Content -->
