--- a/simpz/templates/header.html
+++ b/simpz/templates/header.html
@@ -2,9 +2,9 @@
 
 {% block login%}
 {% if user %}
-<div class="logout"><a href="/simpz/logout/">logout, {{user.username}} <img src="{{user.profile_pic}}" /></a></div>
+<div class="logout"><a href="{% url tauth_logout %}">logout, {{user.username}} <img src="{{user.profile_pic}}" /></a></div>
 {% else %}
-<div class="logout"><a href="/simpz/login/"><img src="/simpz/site_media/images/twitter_button_5_lo.gif/" /></a><br/><br/></div>
+<div class="logout"><a href="{% url tauth_login %}"><img src="{% url static 'images/twitter_button_5_lo.gif' %}" /></a><br/><br/></div>
 {% endif %}
 {% endblock %}
 </div>
