Fixing index.html.

--- a/simpz/templates/index.html
+++ b/simpz/templates/index.html
@@ -3,6 +3,6 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<p><a class="button" href="/simpz/list/">Browse Events</a></p>
-<p><a class="button2" href="/simpz/create/">Create Event</a></p>
+<p><a class="button" href="{% url event_list %}">Browse Events</a></p>
+<p><a class="button2" href="{% url event_create %}">Create Event</a></p>
 {% endblock %}
