--- a/simpz/templates/create.html
+++ b/simpz/templates/create.html
@@ -1,21 +1,21 @@
 {% extends "event_base.html" %}
 
 {% block  js_css_include %}
-	<script type="text/javascript" src="/simpz/site_media/jquery-ui-1.8.1.custom.js"> 
+	<script type="text/javascript" src="{% url static 'jquery-ui-1.8.1.custom.js' %}"> 
  </script>
-<script type="text/javascript" src="/simpz/site_media/jquery.ui.datepicker.js"> </script>
-<script type="text/javascript" src="/simpz/site_media/jquery.timePicker.js"> </script>
-<script type="text/javascript" src="/simpz/site_media/ajaxfileupload.js"> </script>
-<script type="text/javascript" src="/simp/site_media/jquery.uploadify.js"> </script>
+<script type="text/javascript" src="{% url static 'jquery.ui.datepicker.js' %}"> </script>
+<script type="text/javascript" src="{% url static 'jquery.timePicker.js' %}"> </script>
+<script type="text/javascript" src="{% url static 'ajaxfileupload.js' %}"> </script>
+<script type="text/javascript" src="{% url static 'jquery.uploadify.js' %}"> </script>
 <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key={{key}}"
         type="text/javascript"></script> 
 
 
-	<link rel="stylesheet" href="/simpz/site_media/calendar-system.css" type="text/css" >
-	<link rel="stylesheet" href="/simpz/site_media/calendar-en.css" type="text/css" >
-	<link rel="stylesheet" href="/simpz/site_media/jquery.calendar.css" type="text/css" >
-<link rel="stylesheet" href="/simpz/site_media/jquery.ptTimeSelect.css" type="text/css" >	
-<link type="text/css" href="/simpz/site_media/jquery-ui-1.8.1.custom.css" rel="Stylesheet" />
+	<link rel="stylesheet" href="{% url static 'calendar-system.css' %}" type="text/css" >
+	<link rel="stylesheet" href="{% url static 'calendar-en.css' %}" type="text/css" >
+	<link rel="stylesheet" href="{% url static 'jquery.calendar.css' %}" type="text/css" >
+<link rel="stylesheet" href="{% url static 'jquery.ptTimeSelect.css' %}" type="text/css" >	
+<link type="text/css" href="{% url static 'jquery-ui-1.8.1.custom.css' %}" rel="Stylesheet" />
 
 
 {% endblock %} 
@@ -29,7 +29,7 @@
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
-<form id="createForm" action="/simpz/create/" method="post">
+<form id="createForm" action="{% url event_create %}" method="post">
   <ul>
     <li>
 		<label for="event_name">Event Name: </label> 
@@ -89,7 +89,7 @@
 	
     <li>
 		<label for="event_url">Event URL: </label> 
-		<input type="text" value="http://www.simpz.com" name="event_url" class="url" />
+		<input type="text" value="http://www.capitalfactory.com" name="event_url" class="url" />
 	</li>
 	<li>
 		<label for="image">Event Image: </label> 
@@ -131,10 +131,12 @@ function ajaxFileUpload(file_name)
         //starting setting some animation when the ajax starts and completes
         $("div.image_preview")
            .ajaxStart(function(){
-                $(this).html("<img src='/simpz/site_media/images/ajax-loader.gif' />");
+                $(this).html("<img src="{% url static 'images/ajax-loader.gif' %}" />");
         })
            .ajaxComplete(function(){ 
-	            $(this).html("<img src='/simpz/site_media/images/tmp/{{user.id}}_" + file_name + "'  />");
+                    var imgPath = 'images/tmp/{{user.id}}_' + file_name;
+                    var imgUrl = "{% url static  '' %}";
+	            $(this).html("<img src='" + imgUrl + imgPath "' />");
 				$('#event_image').val(file_name);
         });
 
@@ -151,7 +153,7 @@ function ajaxFileUpload(file_name)
         $.ajaxFileUpload
         (
                 {
-                        url:'/simpz/upload_image',
+                        url:'{% url upload_image %}',
                         secureuri:false,
                         fileElementId:'image',
                         dataType: 'json',
@@ -214,7 +216,7 @@ $(document).ready(function() {
                     $(this).css("color", "black");
                 });                			
 		$('#event_date_start').datepicker({ buttonImageOnly: false,
-			 					buttonImage: '/simpz/site_media/images/calendar.png',
+			 					buttonImage: "{% url static 'images/calendar.png' %}",
 								showOn: 'both',
 								onSelect: 
 									function(dateText, inst) { 
@@ -222,7 +224,7 @@ $(document).ready(function() {
 											$('#event_date_end').val(dateText);
 										}}});
 		$('#event_date_end').datepicker({ buttonImageOnly: false,
-							    buttonImage: '/simpz/site_media/images/calendar.png',
+							    buttonImage: "{% url static 'images/calendar.png' %}",
                                                             showOn: 'both'});
 		$("#event_time_start").timePicker({
 				show24Hours: false,
