--- a/simpz/tauth/templates/logout.html
+++ b/simpz/tauth/templates/logout.html
@@ -4,5 +4,5 @@
 <h1>You&rsquo;re logged out</h1>
 <p>Come back real soon, now.</p>
 
-<a href="/simpz/login/"> LOGIN</a>
+<a href="{% url tauth_login %}"> LOGIN</a>
 {% endblock %}
