--- a/analytics/templates/analytics.html
+++ b/analytics/templates/analytics.html
@@ -4,15 +4,15 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>CollectiveVIP</title>
-<link rel="stylesheet" href="/simpz/site_media/blueprint/screen.css" type="text/css" media="screen, projection">
-<link rel="stylesheet" href="/simpz/site_media/blueprint/print.css" type="text/css" media="print">	
-<!--[if lt IE 8]><link rel="stylesheet" href="blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
+<link rel="stylesheet" href="{% url static 'blueprint/screen.css' %}" type="text/css" media="screen, projection">
+<link rel="stylesheet" href="{% url static 'blueprint/print.css' %}" type="text/css" media="print">	
+<!--[if lt IE 8]><link rel="stylesheet" href="{% url static 'blueprint/ie.css' %}" type="text/css" media="screen, projection"><![endif]-->
 
-<link rel="stylesheet" type="text/css" href="/simpz/site_media/analytics/base.css">
-<link rel="stylesheet" type="text/css" href="/simpz/site_media/analytics/header.css">
-<link rel="stylesheet" type="text/css" href="/simpz/site_media/analytics/content.css">
+<link rel="stylesheet" type="text/css" href="{% url static 'analytics/base.css' %}">
+<link rel="stylesheet" type="text/css" href="{% url static 'analytics/header.css' %}">
+<link rel="stylesheet" type="text/css" href="{% url static 'analytics/content.css' %}">
 
-<script type="text/javascript" src="/simpz/site_media/jquery-1.4.2.min.js" ></script>	
+<script type="text/javascript" src="{% url static 'jquery-1.4.2.min.js' %}" ></script>	
 <script src="http://www.google.com/jsapi" type="text/javascript"></script> 
 </head>
 <body>
@@ -42,15 +42,15 @@
 			<!-- Impressions pic -->
 			<div id="topPic" class="span-24 last">
 				<div id="topTitle">Total Impressions 1234567</div>
-				<img src="/simpz/site_media/images/analytics/chart.png">
+				<img src="{% url static 'images/analytics/chart.png' %}">
 			</div>			
 			<div id="botPic" class="span-24 last">
 				<div id="botTitle">Breakdown of Sources</div>
 				<div id="botLeftPic" class="span-18">
-					<img src="/simpz/site_media/images/analytics/chart2.png">
+					<img src="{% url static 'images/analytics/chart2.png' %}">
 				</div>
 				<div id="botRightPic" class="span-6 last">
-					<img src="/simpz/site_media/images/analytics/chart3.png">
+					<img src="{% url static 'images/analytics/chart3.png' %}">
 				</div>
 			</div>
 		</div>
@@ -76,7 +76,7 @@
 						Influence
 					</span>
 					<span class="follow">
-						<img src="/simpz/site_media/images/analytics/follow.png">
+						<img src="{% url static 'images/analytics/follow.png' %}">
 					</span>
 				</span>
 				<BR><BR><BR><BR>
@@ -96,7 +96,7 @@
 						Influence
 					</span>
 					<span class="follow">
-						<img src="/simpz/site_media/images/analytics/follow.png">
+						<img src="{% url static 'images/analytics/follow.png' %}">
 					</span>
 				</span>
 				
@@ -117,7 +117,7 @@
 						Influence
 					</span>
 					<span class="follow">
-						<img src="/simpz/site_media/images/analytics/follow.png">
+						<img src="{% url static 'images/analytics/follow.png' %}">
 					</span>
 				</span>
 
@@ -138,7 +138,7 @@
 						Influence
 					</span>
 					<span class="follow">
-						<img src="/simpz/site_media/images/analytics/follow.png">
+						<img src="{% url static images/analytics/follow.png %}">
 					</span>
 				</span>
 				
